# A package is one or more crates that provide a set of functionality.
# A crate is a binary or library.
# A package must contain zero or one library crates, and no more.
# can contain as many binary crates as you’d like, but it must contain at least one crate (either library or binary).

[package]
name = "csv_combine"
version = "0.1.0"
authors = ["Jesse Zhuang <zhzexi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0" # commandlien argument parser
