# A package is one or more crates that provide a set of functionality.
# A crate is a binary or library.
# A package must contain zero or one library crates, and no more.
# can contain as many binary crates as you’d like, but it must contain at least one crate (either library or binary).

[package]
name = "in_code_learning_rust"
version = "0.1.0"
authors = ["Jesse Zhuang <zhzexi@gmail.com>"]
resolver = "2" # https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typename = "0.1.1" # type_name_of()
